# fep-ai-robotics

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml  pull_request-template.md
.github/workflows/: auto-assign.yaml  lint.yml
demos/: README.md  pyproject.toml  setup.sh
demos/active_inference_cartpole/: __init__.py  agent.py  main.py  utils.py
demos/rl_cartpole/: __init__.py  dqn.py  q_learning.py  sarsa.py  utils.py
tests/: test_fep_ai_robotics.py
