[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fep_ai_robotics"
version = "0.1.0"
description = "A Python framework implementing the Free Energy Principle (FEP) and Active Inference for autonomous robotic systems."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "torch",
    "gymnasium",
    "pybullet"
]

[project.urls]
Homepage = "https://github.com/yourusername/fep-ai-robotics"
Documentation = "https://github.com/yourusername/fep-ai-robotics/wiki"
